--- a/src/scss/components/_loader.scss
+++ b/src/scss/components/_loader.scss
@@ -1,8 +1,34 @@
-.loader{
-  display: fixed;
+@use '../abstracts' as ab;
+
+.loader {
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   min-height: 100vh;
+  z-index: 100;
+  background-color: ab.$main-color;
+  display: flex;
+  padding-right: 50px;
+  padding-bottom: 50px;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.counter-container {
+  overflow: hidden;
+  height: 30vw;
+  min-height: 30vw;
+
+  h3 {
+    z-index: 200;
+    margin-top: 0px;
+    margin-bottom: 1vw;
+    color: ab.$sec-color;
+    font-size: 29vw;
+    font-family: 'Space Grotesk', sans-serif;
+    line-height: 30vw;
+    font-weight: 300;
+  }
 }
