--- a/src/scss/utils/_fonts.scss
+++ b/src/scss/utils/_fonts.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,600,800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&family=Roboto+Mono:wght@100;200;300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600&display=swap');
 
 html,
 body {
@@ -7,3 +7,4 @@ body {
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
