style: loader styling

--- a/src/scss/components/_loader.scss
+++ b/src/scss/components/_loader.scss
@@ -25,8 +25,8 @@
     z-index: 200;
     margin-top: 0px;
     margin-bottom: 1vw;
-    color: ab.$sec-color;
-    font-size: 29vw;
+    color: ab.$black;
+    font-size: 30vw;
     font-family: 'Space Grotesk', sans-serif;
     line-height: 30vw;
     font-weight: 300;
