--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,5 +1,8 @@
-$main-color:hsl(0, 70%, 47%);
+$main-color:hsl(0, 60%, 46%);
 $sec-color:hsl(0, 0%, 100%);
 $black: hsl(0, 0%, 10%);
+$all-black: hsl(0, 0%, 0%);
 $red: hsl(360, 100%, 44%);
-
+$orange: hsl(12, 71%, 56%);
+$green:hsl(151, 16%, 37%);
+$off-white:hsl(49, 46%, 93%);
