--- a/src/scss/components/_transition.scss
+++ b/src/scss/components/_transition.scss
@@ -3,12 +3,11 @@
 .transition-background{
   position: fixed;
   left: 0;
-  top: 0;
   bottom: 0;
   right: 0;
   height: 0;
   z-index: 87;
-  background-color: yellow;
+  background-color: ab.$black;
 }
 
 .transition-main-background{
@@ -16,17 +15,21 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  top: 0;
+  bottom:0;
   left: 0;
-  bottom: 0;
   right: 0;
   height: 0;
   z-index: 88;
-  background-color: ab.$black;
+  background-color: ab.$main-color;
 }
 
 .transition-page-name{
   opacity: 0;
   font-size: 7rem;
-  color: #f5f5f5;
+  font-family: inherit;
+  color: ab.$sec-color;
+  padding: 2rem;
+  margin-left: 2rem;
+  border-radius: 0.5rem;
+  background-color: ab.$black;
 }
