--- a/src/scss/utils/_fonts.scss
+++ b/src/scss/utils/_fonts.scss
@@ -1,10 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&family=Roboto+Mono:wght@100;200;300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@200;300;400;500;600;700&family=Poppins:wght@200;300;400;500&family=Roboto+Mono:wght@100;200;300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Cormorant+Upright:wght@300;400;500&family=Karma:wght@300;400;500;600;700&display=swap');
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  font-family: "Space Grotesk", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+// font-family: 'M PLUS 1 Code', sans-serif;
+// font-family: 'Poppins', sans-serif;
+// font-family: 'Roboto Mono', monospace;
+// font-family: 'Space Grotesk', sans-serif;
+// font-family: 'Cardo', serif;
+// font-family: 'Cormorant Upright', serif;
+// font-family: 'Karma', serif;
