--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -2,8 +2,9 @@
 
 .banner {
   display: grid;
-  justify-content: space-around;
+  justify-content: space-between;
   min-height: calc(100vh - 4rem);
+  overflow: hidden;
  
   .banner-row {
     display: flex;
@@ -29,7 +30,22 @@
       justify-content: center;
     }
     &.banner-bottom{
-      justify-content:flex-end;
+      justify-content:space-between;
+      .svg-wrapper{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .arrow-svg{
+          height:8rem;
+          margin: 0 auto;
+          stroke: ab.$all-black;
+          stroke-width: 2px;
+          stroke-linejoin: round;
+          stroke-linecap: round;
+        }
+      }
     }
     .row-title,
     .row-letter {
@@ -41,5 +57,28 @@
       white-space: nowrap;
     }
   }
+
+  .banner-footer{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    margin-top: 1.5rem;
+
+    a{
+      font-weight: bold;
+      color: ab.$all-black;
+    }
+    
+    .right{
+      display: flex;
+      gap:50px;
+    }
+
+    .left{
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
 }
+
 
