--- a/src/scss/globals/_base.scss
+++ b/src/scss/globals/_base.scss
@@ -5,6 +5,11 @@ body{
   padding: 0 2rem;
 }
 
+.container{
+  // width:min(100vw, 1400px);
+  margin: 0 auto;
+}
+
 a{
   text-decoration: none;
   position: relative;
