--- a/src/scss/pages/_mindmap.scss
+++ b/src/scss/pages/_mindmap.scss
@@ -1,6 +1,103 @@
-@use '../abstracts' as ab;
+@use "../abstracts" as ab;
 
-.mindmap-container{
-  min-height: 100vh;
-  background-color: ab.$orange;
+.mindmap-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 8rem;
+  min-height: calc(100vh - 3rem);
+  padding: 2rem;
+  background-color: hsl(49, 44%, 73%);
+  color: ab.$all-black;
+  font-family: "Cardo", serif;
+
+  .mindmap-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    h3 {
+      font-size: 6rem;
+      justify-self: center;
+      font-family: "Cormorant Upright", serif;
+    }
+
+    .desc-wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+
+      .desc {
+        width: 40vw;
+        align-self: center;
+        font-size: 1.1rem;
+        font-weight: 500;
+        line-height: 1.3;
+      }
+
+      .underline-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .underline-svg {
+          width: 90%;
+          max-height: 4rem;
+          margin-top: 1rem;
+        }
+      }
+    }
+  }
+
+  .footer {
+    .footer-content {
+      display: flex;
+      justify-content: space-between;
+      gap: 2rem;
+      width: 100%;
+
+      .item {
+        display: flex;
+        flex-direction: column;
+        border: 4px solid black;
+        border-radius: 0.2rem;
+        gap: 0.5rem;
+        color: ab.$all-black;
+        max-width: 300px;
+
+        h4 {
+          font-size: 1rem;
+          font-weight: bold;
+          border-bottom: 4px solid black;
+          padding: 1rem;
+          background-color: ab.$main-color;
+        }
+
+        p {
+          font-size: 0.9rem;
+          line-height: 1;
+          margin: 1rem;
+        }
+      }
+
+      .item-4 {
+        border: none;
+        align-self: center;
+        cursor: pointer;
+        display: grid;
+        place-content: center;
+        background-color: ab.$main-color;
+        border-radius: 50%;
+        height: 10rem;
+        width: 10rem;
+
+        .btn-about {
+          background: none;
+          border: none;
+          color: ab.$all-black;
+        }
+      }
+    }
+  }
 }
