style: improves and refactors styleshets

--- a/src/scss/components/_loader.scss
+++ b/src/scss/components/_loader.scss
@@ -8,7 +8,7 @@
   right: 0;
   min-height: 100vh;
   z-index: 99;
-  background-color: ab.$black;
+  background-color: ab.$all-black;
 }
 
 .loader {
@@ -19,7 +19,7 @@
   right: 0;
   min-height: 100vh;
   z-index: 100;
-  background-color: ab.$main-color;
+  background-color: ab.$off-white;
   display: flex;
   padding-right: 50px;
   padding-bottom: 50px;
