--- a/src/scss/utils/_fonts.scss
+++ b/src/scss/utils/_fonts.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@200;300;400;500;600;700&family=Poppins:wght@200;300;400;500&family=Roboto+Mono:wght@100;200;300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Cormorant+Upright:wght@300;400;500&family=Karma:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&family=Syne:wght@400;500;600;700;800&display=swap');
 
 html,
 body {
@@ -14,3 +15,5 @@ body {
 // font-family: 'Cardo', serif;
 // font-family: 'Cormorant Upright', serif;
 // font-family: 'Karma', serif;
+// font-family: 'Syncopate', sans-serif;
+// font-family: 'Syne', sans-serif;
