--- a/src/scss/abstracts/_colors.scss
+++ b/src/scss/abstracts/_colors.scss
@@ -1,8 +1,19 @@
 $main-color:hsl(0, 60%, 46%);
+// $main-color:hsl(151, 16%, 37%);
+$red: hsl(360, 100%, 44%);
+
 $sec-color:hsl(0, 0%, 100%);
+$off-white:hsl(49, 44%, 73%);
+
 $black: hsl(0, 0%, 10%);
 $all-black: hsl(0, 0%, 0%);
-$red: hsl(360, 100%, 44%);
+
+
+$light-orange: hsl(31, 88%, 77%);
 $orange: hsl(12, 71%, 56%);
+
+$light-green:hsl(152, 29%, 47%);
 $green:hsl(151, 16%, 37%);
-$off-white:hsl(49, 46%, 93%);
+
+$brown:hsl(5, 28%, 31%);
+$dark-brown:hsl(10, 20%, 18%);
