--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -1,5 +1,5 @@
-@use '../abstracts/' as ab;
-@use '../utils/' as util;
+@use "../abstracts/" as ab;
+@use "../utils/" as util;
 
 .banner {
   display: grid;
@@ -7,7 +7,7 @@
   min-height: calc(100vh - 4rem);
   overflow: hidden;
 
-  @include util.breakpoint-down(medium){
+  @include util.breakpoint-down(medium) {
     min-height: calc(80vh - 4rem);
   }
 
@@ -16,7 +16,7 @@
     align-items: center;
     gap: 20px;
     overflow: hidden;
-    font-family: 'Cormorant Upright', serif;
+    font-family: "Cormorant Upright", serif;
     border-bottom: 3px solid ab.$all-black;
     border-radius: 0.3rem;
     cursor: pointer;
@@ -26,51 +26,63 @@
       font-size: 1.4rem;
       line-height: 1.6rem;
       width: 320px;
-      @include util.breakpoint-down(medium){
+
+      @include util.breakpoint-down(medium) {
         width: 300px;
       }
-      @include util.breakpoint-down(small){
+      
+      @include util.breakpoint-down(small) {
         display: none;
       }
     }
-    .banner-row-col{
+
+    .banner-row-col {
       width: 50%;
       display: flex;
       align-items: center;
     }
-    .banner-row-col.secondary{
+
+    .banner-row-col.secondary {
       justify-content: center;
     }
-    &.banner-bottom{
-      justify-content:space-between;
-      .svg-wrapper{
+
+    &.banner-bottom {
+      justify-content: space-between;
+
+      .svg-wrapper {
         width: 100%;
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-        .arrow-svg{
+
+        .arrow-svg {
           max-height: 7rem;
           margin: 0 auto;
           stroke: ab.$all-black;
           stroke-width: 2px;
           stroke-linejoin: round;
           stroke-linecap: round;
-          @include util.breakpoint-down(small){
-            height: 3.5rem
+
+          @include util.breakpoint-down(small) {
+            height: 3.5rem;
           }
-          @include util.breakpoint-down(midSmall){
-            height: 3rem
+
+          @include util.breakpoint-down(midSmall) {
+            height: 3rem;
           }
-          @include util.breakpoint-down(extraSmall){
-            height: 2.25rem
+
+          @include util.breakpoint-down(extraSmall) {
+            height: 2.25rem;
           }
         }
       }
-      .row-title{
+
+      .row-title {
         margin-right: 1rem;
       }
     }
+
     .row-title,
     .row-letter {
       font-size: clamp(5rem, calc(3rem + 8vw), 12rem);
@@ -81,38 +93,39 @@
       letter-spacing: -0.7rem;
       white-space: nowrap;
 
-      @include util.breakpoint-down(extraSmall){
+      @include util.breakpoint-down(extraSmall) {
         font-size: 4rem;
       }
     }
   }
 
-  .banner-footer{
+  .banner-footer {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     margin-top: 1.5rem;
 
-    a{
+    a {
+      font-family: "Syncopate", sans-serif;
+      font-size: 0.8rem;
       font-weight: bold;
+      text-transform: uppercase;
       color: ab.$all-black;
     }
-    
-    .right{
-      display: flex;
-      gap:50px;
 
-      @include util.breakpoint-down(small){
-        font-size: 0.9rem;
-        gap:30px
+    .right {
+      display: flex;
+      gap: 50px;
+
+      @include util.breakpoint-down(small) {
+        font-size: 0.5rem;
+        gap: 30px;
       }
     }
 
-    .left{
+    .left {
       display: flex;
       justify-content: flex-end;
     }
   }
 }
-
-
