--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -6,7 +6,11 @@
   align-items: center;
   justify-content: space-between;
   height: 3rem;
+  padding: 0 2rem;
   margin: 0 auto;
+  z-index: 1000;
+  font-family: 'Syncopate', sans-serif;
+  font-size: 0.8rem;
 
   a {
     color: ab.$all-black;
