--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -1,8 +1,7 @@
 @use "../abstracts" as ab;
 
 .projects-container {
-  background-color: ab.$green;
-  height: 100vh;
+  min-height: calc(100vh);
   overscroll-behavior: none;
 
   .title {
@@ -13,47 +12,52 @@
   }
 
   .projects-wrapper {
-    background: ab.$main-color;
     position: relative;
-    height: 100vh;
+    height: 100%;
     padding: 10vh 0;
-    margin-bottom: calc(4rem);
-    width: 400%;
     display: flex;
-    flex-wrap: nowrap;
-    overflow: scroll !important;
+    flex-direction: column;
+    gap: 5rem;
 
-    .project-counter {
-      position: absolute;
-      top: 10%;
-      left: 1%;
-      // mix-blend-mode: difference;
-      line-height: 16px;
-      color: ab.$off-white;
-      font-family: "Cormorant Upright", serif;
-      font-size: 2rem;
+    .title {
+      font-size: 6rem;
       font-weight: bold;
-
-      .divider {
-        content: "";
-        background-color: white;
-        width: 6.25vw;
-        margin: 5px 10px;
-        height: 1px;
-        display: inline-block;
-      }
+      align-self: center;
+      font-family: "Cormorant Upright", serif;
     }
 
     .project-wrapper {
+      background: ab.$main-color;
+      position: relative;
       padding: 0.5rem;
-      aspect-ratio: 16/9;
-      height: 100%;
+      height: 90vh;
       width: 100vw;
       display: grid;
-      grid-template-columns: 20vw 1fr 200px;
+      place-content: center;
 
+      .project-counter {
+        position: absolute;
+        top: 15%;
+        left: 4%;
+        // mix-blend-mode: difference;
+        line-height: 16px;
+        color: ab.$off-white;
+        font-family: "Cormorant Upright", serif;
+        font-size: 2rem;
+        font-weight: bold;
+
+        .divider {
+          content: "";
+          background-color: white;
+          width: 6.25vw;
+          margin: 5px 10px;
+          height: 1px;
+          display: inline-block;
+        }
+      }
       .project-item {
-        width: auto;
+        aspect-ratio: 16/9;
+        width: 60vw;
         height: 100%;
         position: relative;
         will-change: transform;
@@ -70,8 +74,14 @@
           gap: 1vh;
           bottom: 15%;
           z-index: 1;
+          clip-path: inset(0 0 0 100%);
           transform: translate(-20%);
           color: ab.$all-black;
+          transition: clip-path 1s 0.5s cubic-bezier(0.77, 0, 0.175, 1);
+
+          &.is-reveal {
+            clip-path: inset(0 0 0 0);
+          }
 
           .project-info-title {
             font-family: "Cormorant Upright", serif;
@@ -106,14 +116,12 @@
           width: 100%;
           height: 100%;
           will-change: transform;
-          transform: scale(1);
-          clip-path: inset(100% 0 0 0);
-          transition: clip-path 1s cubic-bezier(0.77, 0, 0.175, 1),
-            transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
+          transform: scale(0.7);
+          clip-path: inset(0 0 0 0);
+          transition: transform 1.5s cubic-bezier(0.77, 0, 0.175, 1);
 
           &.is-reveal {
-            clip-path: inset(0 0 0 0);
-            transform: scale(1.1);
+            transform: scale(1);
           }
         }
       }
