refactor: refactored components and added selective styling

--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -1,6 +1,6 @@
 @use '../abstracts' as ab;
 
 .contact-container{
-  min-height: 50vh;
-  background-color: ab.$orange;
+  min-height: 100vh;
+  background-color: ab.$green;
 }
