--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -2,15 +2,19 @@
 @use '../utils/' as util;
 
 .navigation{
+  position: fixed;
+  top: 0;
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 3rem;
   padding: 0 2rem;
   margin: 0 auto;
-  z-index: 1000;
+  z-index: 100;
   font-family: 'Syncopate', sans-serif;
   font-size: 0.8rem;
+  transition: 0.5s ease;
 
   a {
     color: ab.$all-black;
