--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -30,7 +30,7 @@
       @include util.breakpoint-down(medium) {
         width: 300px;
       }
-      
+
       @include util.breakpoint-down(small) {
         display: none;
       }
@@ -107,10 +107,18 @@
 
     a {
       font-family: "Syncopate", sans-serif;
-      font-size: 0.8rem;
+      font-size: clamp(0.7rem, 0.6rem + 0.5vw, 0.9rem);
       font-weight: bold;
       text-transform: uppercase;
       color: ab.$all-black;
+
+      @include util.breakpoint-up(medium) {
+        font-size: 0.9rem;
+      }
+
+      &:disabled {
+        cursor: pointer;
+      }
     }
 
     .right {
@@ -118,7 +126,6 @@
       gap: 50px;
 
       @include util.breakpoint-down(small) {
-        font-size: 0.5rem;
         gap: 30px;
       }
     }
