--- a/src/Scss/pages/_mindmap.scss
+++ b/src/Scss/pages/_mindmap.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   gap: 8rem;
   padding: 2rem;
-  background-color: hsl(49, 44%, 73%);
+  background-color: ab.$off-white;
   color: ab.$all-black;
   font-family: "Syncopate", sans-serif;
 
