--- a/src/Scss/pages/_projects.scss
+++ b/src/Scss/pages/_projects.scss
@@ -1,19 +1,9 @@
 @use "../abstracts" as ab;
+@use "../utils/" as util;
 
 .projects-container {
   min-height: calc(100vh);
   overscroll-behavior: none;
-
-  // @include util.breakpoint-down(midSmall) {
-  //   padding: 1rem;
-  // }
-
-  .title {
-    font-size: 6rem;
-    font-weight: bold;
-    color: ab.$all-black;
-    font-family: "Cormorant Upright", serif;
-  }
 
   .projects-wrapper {
     position: relative;
@@ -24,10 +14,14 @@
     gap: 5rem;
 
     .title {
-      font-size: 6rem;
+      font-size: clamp(4rem, 4rem + 3vw, 6rem);
       font-weight: bold;
       align-self: center;
       font-family: "Cormorant Upright", serif;
+
+      @include util.breakpoint-down(midSmall) {
+        margin-bottom: 5vh;
+      }
     }
 
     .project-wrapper {
@@ -39,16 +33,38 @@
       display: grid;
       place-content: center;
 
+      @include util.breakpoint-down(mediumLarge) {
+        height: 80vh;
+      }
+      @include util.breakpoint-down(medium) {
+        height: 70vh;
+      }
+
       .project-counter {
         position: absolute;
         top: 15%;
         left: 4%;
-        // mix-blend-mode: difference;
         line-height: 16px;
         color: ab.$off-white;
         font-family: "Cormorant Upright", serif;
         font-size: 2rem;
         font-weight: bold;
+
+        @include util.breakpoint-down(mediumLarge) {
+          top: -3%;
+        }
+
+        @include util.breakpoint-down(medium) {
+          top: -4%;
+        }
+
+        @include util.breakpoint-down(midSmall) {
+          top: -10%;
+        }
+
+        @include util.breakpoint-down(extraSmall) {
+          top: -13%;
+        }
 
         .divider {
           content: "";
@@ -65,6 +81,33 @@
         height: 100%;
         position: relative;
         will-change: transform;
+
+        @include util.breakpoint-down(mediumLarge) {
+          width: 70vw;
+        }
+
+        @include util.breakpoint-down(medium) {
+          aspect-ratio: 16/10;
+          width: 75vw;
+        }
+
+        @include util.breakpoint-down(small) {
+          aspect-ratio: 16/13;
+        }
+
+        @include util.breakpoint-down(halfSmall) {
+          aspect-ratio: 16/15;
+          width: 80vw;
+        }
+
+        @include util.breakpoint-down(midSmall) {
+          aspect-ratio: 9/16;
+          width: 60vw;
+        }
+
+        @include util.breakpoint-down(extraSmall) {
+          width: 70vw;
+        }
 
         .project-item-info {
           position: absolute;
@@ -83,6 +126,21 @@
           color: ab.$all-black;
           transition: clip-path 1s 0.5s cubic-bezier(0.77, 0, 0.175, 1);
 
+          @include util.breakpoint-down(medium) {
+            padding: 1rem;
+            gap: 0.5vh;
+            max-width: 30vw;
+          }
+
+          @include util.breakpoint-down(small) {
+            max-width: 40vw;
+          }
+
+          @include util.breakpoint-down(halfSmall) {
+            max-width: none;
+            transform: translate(-10%);
+          }
+
           &.is-reveal {
             clip-path: inset(0 0 0 0);
           }
@@ -90,12 +148,12 @@
           .project-info-title {
             font-family: "Cormorant Upright", serif;
             font-weight: bold;
-            font-size: 2vw;
+            font-size: clamp(0.7rem, 0.5rem + 2vw, 1.5rem);
           }
 
           .project-info-desc {
             position: relative;
-            font-size: 1vw;
+            font-size: clamp(0.7rem, 0.5rem + 0.5vw, 0.9rem);
           }
 
           .project-info-link {
@@ -104,11 +162,15 @@
             color: ab.$off-white;
             border-radius: 0.1rem;
             font-weight: bold;
-            font-size: 0.9rem;
+            font-size: clamp(0.5rem, 0.5rem + 0.4vw, 0.8rem);
             text-transform: uppercase;
             font-family: "Syncopate", serif;
             padding: 0.5rem 1rem;
             margin-top: 1vh;
+
+            @include util.breakpoint-down(mediumLarge) {
+              padding: 0.5rem;
+            }
           }
         }
 
@@ -121,20 +183,24 @@
           height: 100%;
           will-change: transform;
           transform: scale(0.7);
-          transition: transform 1.5s cubic-bezier(0.77, 0, 0.175, 1);
+          transition: all 1.5s cubic-bezier(0.77, 0, 0.175, 1);
 
           &.is-reveal {
             transform: scale(1);
+            filter: none;
           }
         }
       }
       &:nth-child(odd) {
-        .project-item-info{
+        .project-item-info {
           right: 0;
           transform: translate(20%);
           clip-path: inset(0 100% 0 0%);
+          
+          @include util.breakpoint-down(halfSmall) {
+            transform: translate(10%);
+          }
         }
-      
       }
     }
   }
