refactor & style: dynamically select image depending on window size & refactor styles

--- a/src/Scss/pages/_contact.scss
+++ b/src/Scss/pages/_contact.scss
@@ -116,7 +116,7 @@
               color: ab.$off-white;
 
               @include util.breakpoint-down(small) {
-                background-color: ab.$light-white;
+                color: ab.$light-white;
               }
 
               @include util.breakpoint-down(midSmall) {
