--- a/src/Scss/pages/_mindmap.scss
+++ b/src/Scss/pages/_mindmap.scss
@@ -73,6 +73,39 @@
             }
           }
         }
+
+        .social-links {
+          justify-self: center;
+          width: 80%;
+          padding: 2rem 0;
+          display: grid;
+          grid-template-columns: repeat(5, 1fr);
+          gap: 2rem;
+
+          @include util.breakpoint-down(extraSmall) {
+            grid-template-columns: repeat(4, 1fr);
+          }
+
+          a{
+            justify-self: center;
+            display: flex;
+
+            .social-icon {
+              font-size: 2.5rem;
+              color: ab.$dark-brown;
+              cursor: pointer;
+              margin-bottom: 7px;
+              transition: all 0.2s ease-in-out;
+              &:hover {
+                color: ab.$main-color;
+              }
+  
+              @include util.breakpoint-down(midSmall) {
+                font-size: 1.8rem;
+              }
+            }
+          }
+        }
       }
 
       .underline-wrapper {
