--- a/src/Scss/pages/_projects.scss
+++ b/src/Scss/pages/_projects.scss
@@ -170,7 +170,7 @@
             margin-top: 1vh;
 
             @include util.breakpoint-down(medium) {
-              background-color: ab.$light-white;
+              color: ab.$light-white;
             }
 
             @include util.breakpoint-down(mediumLarge) {
