--- a/src/Scss/pages/_projects.scss
+++ b/src/Scss/pages/_projects.scss
@@ -82,28 +82,6 @@
         position: relative;
         will-change: transform;
 
-        .title-wrapper {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          width: 100%;
-        }
-
-        .project-links {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          gap: 10px;
-
-          .project-info-link {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: ab.$dark-brown;
-            font-size: 1.3rem;
-          }
-        }
-
         @include util.breakpoint-down(mediumLarge) {
           width: 70vw;
         }
@@ -153,11 +131,11 @@
             background-color: ab.$light-white;
             padding: 1rem;
             gap: 0.5vh;
-            max-width: 30vw;
+            max-width: 40vw;
           }
 
           @include util.breakpoint-down(small) {
-            max-width: 40vw;
+            max-width: 50vw;
           }
 
           @include util.breakpoint-down(halfSmall) {
@@ -169,10 +147,36 @@
             clip-path: inset(0 0 0 0);
           }
 
-          .project-info-title {
-            font-family: "Cormorant Upright", serif;
-            font-weight: bold;
-            font-size: clamp(0.7rem, 0.5rem + 2vw, 1.5rem);
+          .title-wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 1rem;
+            width: 100%;
+
+            .project-info-title {
+              font-family: "Cormorant Upright", serif;
+              font-weight: bold;
+              font-size: clamp(0.7rem, 0.5rem + 2vw, 1.5rem);
+            }
+
+            .project-links {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              gap: 10px;
+
+              .project-info-link {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: ab.$dark-brown;
+                
+                .project-tooltip {
+                  font-size: clamp(0.7rem, 0.5rem + 2vw, 1.3rem);
+                }
+              }
+            }
           }
 
           .project-info-desc {
